[package]
name = "non-preemptive-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
heapless = "0.7.15"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
non-preemptive-scheduler-macros = { path = "macros", version = "0.1.0" }
volatile-register = "0.2.0"

[dev-dependencies]
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f429", "usb_hs", "otg-hs"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[features]
default = ["armvx-m"]
core = []
armvx-m = ["core"]
risc-v = ["core"]
x86 = ["core"]
panic = []

[profile.dev]
codegen-units = 1
debug = true
incremental = false

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"

[[example]]
name = "led_blinky"
required-features = ["panic"]

[[example]]
name = "usb_dev_cdc"
required-features = ["panic"]
